# Remote-Controlled-RGB-LED

./: BuildOnWindows.bat  BuildUnitTests.sh  CMakeLists.txt  CleanUnitTests.sh  README.md  RemoteLED.cpp  RemoteLED.ino  UT_RemoteLED.cpp
src/: HardwareInterface.cpp  RemoteLED.cpp
src/include/: HardwareIntarface.hpp  RemoteLED.hpp
test/: HardwareInterfaceMock.cpp  UT_RemoteLED.cpp
test/include/: HardwareInterfaceMock.hpp
